testdata/baselines/reference/submodule/conformance/typeFromPrototypeAssignment3.errors.txt
bug26885.js(2,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
bug26885.js(11,21): error TS2339: Property '_map' does not exist on type '{ get: (key: string) => number; }'.
bug26885.js(15,12): error TS2749: 'Multimap3' refers to a value, but is being used as a type here. Did you mean 'typeof Multimap3'?
bug26885.js(16,13): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== bug26885.js (4 errors) ====
    function Multimap3() {
        this._map = {};
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    };
    
    Multimap3.prototype = {
        /**
         * @param {string} key
         * @returns {number} the value ok
         */
        get(key) {
            return this._map[key + ''];
                        ~~~~
!!! error TS2339: Property '_map' does not exist on type '{ get: (key: string) => number; }'.
        }
    }
    
    /** @type {Multimap3} */
               ~~~~~~~~~
!!! error TS2749: 'Multimap3' refers to a value, but is being used as a type here. Did you mean 'typeof Multimap3'?
    const map = new Multimap3();
                ~~~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    const n = map.get('hi')